RESOLVED FIXED288671
[WebGPU] insertBits is not bounds checked
https://bugs.webkit.org/show_bug.cgi?id=288671
Summary [WebGPU] insertBits is not bounds checked
Mike Wyrzykowski
Reported 2025-02-26 17:07:10 PST
[WebGPU] insertBits is not bounds checked
Attachments
Mike Wyrzykowski
Comment 1 2025-02-26 17:07:22 PST
Mike Wyrzykowski
Comment 2 2025-02-26 21:47:36 PST
EWS
Comment 3 2025-02-27 09:28:45 PST
Committed 291233@main (990097ce54db): <https://commits.webkit.org/291233@main> Reviewed commits have been landed. Closing PR #41491 and removing active labels.
EWS
Comment 4 2025-02-27 15:17:01 PST
Committed 289651.193@safari-7621-branch (98c76eceed2c): <https://commits.webkit.org/289651.193@safari-7621-branch> Reviewed commits have been landed. Closing PR #2696 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.