[WebGPU] insertBits is not bounds checked https://bugs.webkit.org/show_bug.cgi?id=288671 rdar://145583842

Reviewed by Tadeu Zagallo.

Implemented insertBits as described in https://www.w3.org/TR/WGSL/#insertBits-builtin:

  w is the bit width of T
  o = min(offset, w)
  c = min(count, w - o)
  The result is e if c is 0.
  Otherwise, bits o..o + c - 1 of the result are copied from bits 0..c - 1 of newbits. Other bits of the result are copied from e.

* LayoutTests/fast/webgpu/nocrash/fuzz-288671-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-288671.html: Added.
Add regression test.

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::emitNecessaryHelpers):
(WGSL::Metal::FunctionDefinitionWriter::visit):
* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):
* Source/WebGPU/WGSL/WGSLShaderModule.h:
(WGSL::ShaderModule::usesInsertBits const):
(WGSL::ShaderModule::setUsesInsertBits):

Canonical link: https://commits.webkit.org/291233@main